# SDDT_io4_esp32s2

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  main.c
main/components/: card_reader.c  card_reader.h  hardware.c  hardware.h  pn532.c  pn532.h  usb_hid.c  usb_hid.h  ws2812.c  ws2812.h
modify idf/: Kconfig  tusb_config.h
